# paralyzables

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  mkdocs.yml  pyproject.toml
docs/: gen_ref_nav.py
src/paralyzables/: __init__.py  config.py  parse.py  utils.py
src/paralyzables/assets/: confusables.txt
