[tool.poetry]
name = "paralyzables"
version = "0.1.0"
description = ""
authors = ["gewalt01 <gewalt01@github.com>"]
packages = [{include = "paralyzables", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"


[tool.poetry.group.typing.dependencies]
pyright = "^1.1.333"
mypy = "^1.6.1"
types-docutils = "^0.20.0.3"
types-markdown = "^3.5.0.0"
types-pyyaml = "^6.0.12.12"
types-toml = "^0.10.8.7"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = "^0.23.0"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
